--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <div class="worksBx">
                             <img src="app.png" id="na1">
                             <br>
-                            <a href="https://github.com/utkarsh2290/Quiz" target="_blank" style="text-decoration: none;"><h2>Apple Store Managment System</h2>
+                            <h2>Apple Store Managment System</h2>
                             <p>This a virtual store for in real functioning apple store. Customer and staff are handeled via the site. Customers can view the products and services and buy the from the site itself. The admin can manage customers, staff, inventory and offers. </p></a>
                         </div>
                     </div>
